<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/bottom_item_main_tint"
        android:title="@string/main_item_menu"  />
    <item
        android:id="@+id/services"
        android:icon="@drawable/bottom_item_services_tint"
        android:title="@string/services_item_menu"  />
    <item
        android:id="@+id/requests"
        android:icon="@drawable/bottom_item_requests_tint"
        android:title="@string/requests_item_menu"  />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/bottom_item_chat_tint"
        android:title="@string/chat_item_menu"  />
    <item
        android:id="@+id/news"
        android:icon="@drawable/bottom_item_news_tint"
        android:title="@string/news_item_menu"  />


</menu>